--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="{% url "home"%}">Home</a>
-                
+                {% block page_actions %}{% endblock %}
                 <a class="navbar-brand" href="{% url "projects"%}">Project</a>
             </div>
         </nav>
