--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,16 +1,21 @@
 {% extends "home.html" %}
 {% block title %}Projects{% endblock title %}
 {% block content %}
-{% for p in projects %}
-<div class='card'>
-    <ul>
-        <li>Nombre:{{p.name}}</li>
-        <li>Url:{{p.tag}}</li>
-        <a href='{{p.urltag}}' class="btn btn-primary">Ir al proyecto</a>
-        <a href={% url "about" p.id%} class="btn btn-primary">Ver más del proyecto</a>
+<div class="container mt-5">
+    <h1 class="mb-4">My Projects</h1>
+    <div class="row">
+        {% for p in projects %}
+            <div class='card'>
+                <ul>
+                    <li>Nombre:{{p.name}}</li>
+                    <li>Tag:{{p.tag}}</li>
+                    <a href='{{p.urltag}}' class="btn btn-primary">Ir al proyecto</a>
+                    <a href={% url "about" p.id%} class="btn btn-primary">Ver más del proyecto</a>
 
-    </ul>
+                </ul>
+            </div>
+
+        {% endfor %}
+    </div>
 </div>
-
-{% endfor %}
 {% endblock content %}
