--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -7,13 +7,9 @@
 
 Cuento con formación en Python, Desarrollo Web (HTML, CSS, Bootstrap), JavaScript y Ciberseguridad, adquirida a través de cursos en Coderhouse. Tengo experiencia previa en distintos rubros como gestión administrativa, logística, atención al cliente y servicios, lo que me permitió desarrollar habilidades como responsabilidad, organización, adaptabilidad y trabajo en equipo.
 
-Actualmente busco oportunidades junior / trainee donde pueda aplicar mis conocimientos técnicos, seguir aprendiendo y aportar valor desde el compromiso y la mejora continua.
+Actualmente busco oportunidades como desarrollador de software donde pueda aplicar mis conocimientos técnicos, seguir aprendiendo y aportar valor desde el compromiso y la mejora continua.
 
 </p>
 <p>Si tienes alguna pregunta o comentario, no dudes en contactarme a través de los siguientes metodos</p>
-<ul>
-    <li>Email:ebrancatti@gmail.com</li>
-    <li>Telefono: +54 9 11 36385168</li>
-    <li>LinkedIn: <a href="https:/www.linkedin.com/in/ezequiel-brancatti-202b00221" target="_blank">Ezequiel Brancatti</a></li>
-</ul>
+
 {% endblock %}
