--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -15,7 +15,7 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url "home"%}">Home</a>
                 {% block page_actions %}{% endblock %}
-                <a class="navbar-brand" href="{% url "projects"%}">Project</a>
+                <a class="navbar-brand" href="{% url "projects"%}">Proyectos</a>
             </div>
         </nav>
         {% block content %}
