--- a/app/templates/home1.html
+++ b/app/templates/home1.html
@@ -9,7 +9,7 @@
     <h1>Portfolio de Ezequiel Brancatti</h1>
 
     <p>¡Bienvenido a mi portafolio! Aquí encontrarás una selección de mis proyectos.</p>
-    <p>Soy un desarrollador junior. Me especializo en desarrollo back-end y tengo experiencia en diversos lenguajes de programación.</p>
+    <p>Soy un desarrollador de software primerizo. Me especializo en desarrollo back-end y tengo experiencia en diversos lenguajes de programación.</p>
     <p>Explora mis proyectos para ver ejemplos de mi trabajo y no dudes en contactarme si tienes alguna pregunta.</p>
 </div>
 <a href="{% url 'projects' %}" class="btn btn-primary">Ver Proyectos</a>
