--- a/app/templates/app/home1.html
+++ b/app/templates/app/home1.html
@@ -1,4 +1,4 @@
-{% extends "home.html" %}
+{% extends "app/home.html" %}
 {% block title %}Home{% endblock title %}
 {% block page_actions %}
 <a  class="navbar-brand" href="{% url 'more' %}">Mas</a>
