--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -1,4 +1,4 @@
-{% extends "home.html" %}
+{% extends "app/home.html" %}
 {% block title %}About{% endblock title %}
 {% block content %}
 <h2>{{ project.name }}</h2>
