--- a/app/templates/app/contact_success.html
+++ b/app/templates/app/contact_success.html
@@ -1,5 +1,5 @@
-{% extends "home.html" %}
-{% block title %}About{% endblock title %}|
+{% extends "app/home.html" %}
+{% block title %}Contact Success{% endblock title %}
 {% block content %}
 <div class="alert alert-primary" role="alert">
     Thank you for reaching out! Your message has been successfully sent. We will get back to you shortly.
