--- a/app/templates/app/projects.html
+++ b/app/templates/app/projects.html
@@ -1,4 +1,4 @@
-{% extends "home.html" %}
+{% extends "app/home.html" %}
 {% block title %}Projects{% endblock title %}
 {% block content %}
 <div class="container mt-5">
