--- a/app/templates/app/more.html
+++ b/app/templates/app/more.html
@@ -5,7 +5,7 @@
 <div>
     <h1>Más Sobre Mí</h1>
 
-    <p>Soy Ezequiel Brancatti, un desarrollador junior apasionado por la tecnología y el desarrollo de software. Me especializo en desarrollo back-end y tengo experiencia en diversos lenguajes de programación, siendo estos Python y JavaScript.</p>
+    <p>Soy Ezequiel Brancatti, un desarrollador de software apasionado por la tecnología y el desarrollo de software. Me especializo en desarrollo back-end y tengo experiencia en diversos lenguajes de programación, siendo estos Python y JavaScript.</p>
     <p>Me encanta aprender nuevas tecnologías y mejorar mis habilidades constantemente. En mi portafolio, encontrarás una selección de mis proyectos, que reflejan mi capacidad para resolver problemas y crear soluciones eficientes.</p>
     <p>Estoy siempre abierto a nuevas oportunidades y desafíos que me permitan crecer profesionalmente.</p>
     <p>Si deseas saber más sobre mí o discutir posibles colaboraciones, no dudes en contactarme. ¡Estoy emocionado por lo que el futuro me depara en el mundo del desarrollo de software!</p>
