--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,25 +2,20 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
-{% if messages %}
-{% for message in messages %}
-    <div style="padding:10px; background:#d4edda; color:#155724; border-radius:5px; margin-bottom:10px;">
-        {{ message }}
-    </div>
-{% endfor %}
-{% endif %}
+
 <h1>Contactame</h1>
-<p>Soy una persona perseverante y comprometida, con formación en informática y un fuerte interés en el área de tecnología y desarrollo de software. Mi objetivo es continuar aprendiendo y adquirir experiencia profesional que me permita crecer dentro del sector IT.
 
-Cuento con formación en Python, Desarrollo Web (HTML, CSS, Bootstrap), JavaScript y Ciberseguridad, adquirida a través de cursos en Coderhouse. Tengo experiencia previa en distintos rubros como gestión administrativa, logística, atención al cliente y servicios, lo que me permitió desarrollar habilidades como responsabilidad, organización, adaptabilidad y trabajo en equipo.
-
-Actualmente busco oportunidades como desarrollador de software donde pueda aplicar mis conocimientos técnicos, seguir aprendiendo y aportar valor desde el compromiso y la mejora continua.
-
-</p>
-<p>Si tienes alguna pregunta o comentario, no dudes en contactarme a través de los siguientes metodos</p>
+<p>Si tienes alguna pregunta o comentario, no dudes en contactarme a través del siguiente formulario</p>
 <form method="post">{% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Enviar</button>
     
 </form>
+{% if messages %}
+{% for message in messages %}
+    <div style="padding:10px; background:#d4edda; color:#155724; border-radius:5px; margin-bottom:10px; align-items: center;">
+        {{ message }}
+    </div>
+{% endfor %}
+{% endif %}
 {% endblock %}
